# yalta

./: .gitignore  LICENSE  README.md  pyproject.toml  yalta_script.py
yalta/: __main__.py  _paths.py  core.py  format.py  main.py  parse_args.py  tasks.py  util_date.py  util_notif.py
